<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--title-->
    <TextView
        android:id="@+id/tv_title_select_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/choose_label_color"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/txt_title"
        android:fontFamily="@font/medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--color palette-->
    <com.madrapps.pikolo.HSLColorPicker
        android:id="@+id/HSLColorPicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edt_label_title"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_title_select_label"
        app:layout_constraintTop_toTopOf="parent" />

    <!--lable title-->
    <EditText
        android:id="@+id/edt_label_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/stroked_rectangle"
        android:gravity="center"
        android:hint="@string/enter_label"
        android:padding="16dp"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/txt_body"
        android:fontFamily="@font/semi_bold"
        app:layout_constraintEnd_toStartOf="@+id/HSLColorPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_select_label" />

    <!--cancel button-->
    <Button
        android:id="@+id/btn_cancel_select_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/cta_cancel"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/txt_body"
        android:background="@drawable/right_radial_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_label_title" />

    <!--save button-->
    <Button
        android:id="@+id/btn_save_select_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cta_save"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/txt_body"
        android:background="@drawable/left_radial_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel_select_label" />

    <!--OR label-->
    <TextView
        android:id="@+id/tv_lbl_select_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_select_one"
        android:gravity="center"
        android:textColor="@color/textSecondary"
        android:fontFamily="@font/medium"
        android:textSize="@dimen/txt_body"
        android:padding="5dp"
        android:background="#F2F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel_select_label" />

    <!--labels list-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_labels_select_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_select_one"
        tools:listitem="@layout/item_label_home_filters" />

</androidx.constraintlayout.widget.ConstraintLayout>